# rgui

./: .gitignore  Doxyfile  meson.build
examples/: basic.c  meson.build
examples/glad/: meson.build
examples/glad/include/glad/: gl.h
include/: meson.build  rgui.h
prefix/include/: rgui.h
prefix/lib/pkgconfig/: rgui.pc
src/: meson.build  rgui.c  rgui_internal.h
